--- a/week-4/assignment-3/package.json
+++ b/week-4/assignment-3/package.json
@@ -2,7 +2,7 @@
   "name": "assignment-3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://<username>.github.io/remote-assignments",
+  "homepage": "https://Ninanaiwunyao.github.io/remote-assignments",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
